@@ -1946,33 +1946,34 @@ do_enter_on_file_entry (file_entry *fe)
     }
     g_free (full_name);
 
+    if (confirm_execute) {
+	if (query_dialog
+	    (_(" The Midnight Commander "),
+	     _(" Do you really want to execute? "), 0, 2, _("&Yes"),
+	     _("&No")) != 0)
+	    return 1;
+    }
 #ifdef USE_VFS
-    if (vfs_current_is_local ())
+    if (!vfs_current_is_local ()) {
+	char *tmp;
+	int ret;
+
+	tmp = concat_dir_and_file (vfs_get_current_dir (), fe->fname);
+	ret = mc_setctl (tmp, MCCTL_EXTFS_RUN, NULL);
+	g_free (tmp);
+	/* We took action only if the dialog was shown or the execution
+	 * was successful */
+	return confirm_execute || (ret == 0);
+    }
 #endif
+
     {
 	char *tmp = name_quote (fe->fname, 0);
 	char *cmd = g_strconcat (".", PATH_SEP_STR, tmp, NULL);
 	g_free (tmp);
-	if (!confirm_execute
-	    ||
-	    (query_dialog
-	     (_(" The Midnight Commander "),
-	      _(" Do you really want to execute? "), 0, 2, _("&Yes"),
-	      _("&No")) == 0))
-	    shell_execute (cmd, 0);
+	shell_execute (cmd, 0);
 	g_free (cmd);
     }
-#ifdef USE_VFS
-    else {
-	char *tmp;
-
-	tmp = concat_dir_and_file (vfs_get_current_dir (), fe->fname);
-	if (!mc_setctl (tmp, MCCTL_EXTFS_RUN, NULL))
-	    /* Execution on this filesysten is not implemented */
-	    message (1, _("Warning"), _(" No action taken "));
-	g_free (tmp);
-    }
-#endif				/* USE_VFS */
 
     return 1;
 }
